--- a/BlazorServerUniversity/BlazorServerUniversity.csproj
+++ b/BlazorServerUniversity/BlazorServerUniversity.csproj
@@ -11,6 +11,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Devart.Data.SQLite.EFCore" Version="5.19.2066" />
+        <PackageReference Include="Devart.Data.SQLite.EFCore.Design" Version="5.19.2066" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="6.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="6.0.4" />
@@ -19,10 +21,16 @@
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="ORM\Repositories" />
     </ItemGroup>
 
 </Project>
