--- a/BlazorServerUniversity/appsettings.json
+++ b/BlazorServerUniversity/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=app.db;Cache=Shared",
+    "UniversityConnection": "DataSource=university-db.db;Cache=Shared"
   },
   "Logging": {
     "LogLevel": {
