--- a/BlazorServerUniversity/BlazorServerUniversity.csproj
+++ b/BlazorServerUniversity/BlazorServerUniversity.csproj
@@ -28,9 +28,15 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.3" />
-        <PackageReference Include="Syncfusion.Blazor.Grid" Version="20.1.0.52" />
-        <PackageReference Include="Syncfusion.Blazor.Spinner" Version="20.1.0.52" />
-        <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.1.0.52" />
+        <PackageReference Include="Syncfusion.Blazor.Buttons" Version="20.1.0.55" />
+        <PackageReference Include="Syncfusion.Blazor.Grid" Version="20.1.0.55" />
+        <PackageReference Include="Syncfusion.Blazor.PdfViewerServer.Windows" Version="20.1.0.55" />
+        <PackageReference Include="Syncfusion.Blazor.Spinner" Version="20.1.0.55" />
+        <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.1.0.55" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="wwwroot\data" />
     </ItemGroup>
 
 </Project>
