--- a/BlazorServerUniversity/BlazorServerUniversity.csproj
+++ b/BlazorServerUniversity/BlazorServerUniversity.csproj
@@ -36,6 +36,7 @@
         <PackageReference Include="Syncfusion.Blazor.Popups" Version="20.1.0.55" />
         <PackageReference Include="Syncfusion.Blazor.Spinner" Version="20.1.0.55" />
         <PackageReference Include="Syncfusion.Blazor.Themes" Version="20.1.0.55" />
+        <PackageReference Include="System.Web.Http.Common" Version="4.0.20126.16343" />
     </ItemGroup>
 
     <ItemGroup>
